--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-web-report/
-*.idea
-*.DS_Store
+.env
