Adds README.md and fixes Volume.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     image: expo
     volumes:
-      - ${VOLUME}
+      - dev-root:/root
     ports:
       - 19000:19000
       - 19001:19001
@@ -13,7 +13,10 @@ services:
     entrypoint:
       - bash
     environment:
-      - APP_PATH=${APP_PATH}
       - REACT_NATIVE_PACKAGER_HOSTNAME=${PHYSICAL_HOST_IP}
       - YARN_START_CMD=${YARN_START_CMD}
     command: "./yarn-start.sh"
+
+volumes:
+  dev-root:
+    external: true
